--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,8 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
-
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
+.nyc_output
+.coveralls.yml
 
 # node-waf configuration
 .lock-wscript
